--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,105 @@
 
+/* .users{
+  height:20%;
+  width:20%;
+  opacity: 70%;
+}
+
+.micro{
+  height:80%;
+  width:20%;
+  opacity: 70%:
+}
+
+.rotate{
+  height:20%;
+  width:20%;
+  opacity: 70%;
+} */
+.top_icon{
+  height: 20%;
+  width:20%;
+  opacity: 50%;
+}
+
+.buttons{
+  height: auto;
+  width: 25%;
+  background-color: orange;
+  border-top-left-radius:10px;
+  border-top-right-radius:10px;
+  border-bottom-right-radius:10px;
+  border-bottom-left-radius:10px;
+  color: white;
+  background-color:#FF792C;
+}
+
+.users{
+  margin-top: 4%;
+}
+
+.AboutUs{
+  margin-top: 10%;
+  background-color: #F6F6F6;
+}
+
+.imgabout{
+  margin-top:10%;
+}
+
+.abouttxt{
+  color:#FF792C;
+  margin-top:10%;
+}
+
+.pics{
+margin-top: 5%;
+position: relative;
+
+color: white;
+}
+
+.LeadershipTeam{
+  background-color:white;
+}
+.leader{
+  margin-top: 10%;
+  color:#FF792C;
+  justify-content: center;
+}
+
+.pics1 {
+  position: relative;
+  text-align:center;
+  color: white;
+  font-style: helvetica;
+  font-size:30px;
+  font-weight: bold;
+
+}
+.noah{
+position: absolute;
+top: 89%;
+left: 50%;
+transform: translate(-50%, -50%);
+  background-color: rgba(0,0,0,0.5);
+}
+
+.noahbox{
+
+
+}
+
+.services{
+  margin-top: 20%;
+  color:#FF792C;
+  background-color:white;
+}
+
+.service1{
+  background-color:white;
+}
+.noahbox2{
+  margin-top: -17px;
+  font-size: 15px;
+}
