--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,15 @@
 #header ul{
   margin-right: 2%;
 }
+#processes{
+  background-color: #F6F6F6;
+  margin-top: 1%;
+}
+#processes h1{
+  margin-top: 5%;
+  margin-bottom: 5%;
+  color:#FF792C !important;
+}
+.step_content{
+  margin-top: 5%;
+}
