--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 .jumbotron{
   background-image: url('../images/navbar_background.jpg');
-  height: 80vh;
+  height: 40vh;
   background-size: cover;
   background-position: center;
   color: #ffffff;
@@ -76,15 +76,25 @@
 }
 
 .buttons{
-  height: auto;
+  /* height: auto;
   width: auto;
   background-color: orange;
   border-top-left-radius:10px;
   border-top-right-radius:10px;
   border-bottom-right-radius:10px;
-  border-bottom-left-radius:10px;
+  border-bottom-left-radius:10px; */
+  border: none;
   color: white;
   background-color:#FF792C;
+}
+.lmbtn{
+  margin-top: 6%;
+}
+.osbtn{
+  margin-top: 5%;
+}
+.probtn{
+  margin-top: 3%;
 }
 
 .users{
